// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Publish command e2e > 'npm 10' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'npm 10' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: 401 Unauthorized - PUT [registry-url]/pkg-a
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 10' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 10' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'npm 11' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: 401 Unauthorized - PUT [registry-url]/pkg-a
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'npm 12' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: 401 Unauthorized - PUT [registry-url]/pkg-a
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for pnpm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: 401 Unauthorized - PUT [registry-url]/pkg-a
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for pnpm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: 401 Unauthorized - PUT [registry-url]/pkg-a
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > publishes a first version of a package 1`] = `
"🦋 changeset v3.0.0-next.8

Received 404 for yarn npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages◇  Successfully published:
pkg-a@1.0.0
◇  Created git tags:
- pkg-a@1.0.0
"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: Invalid authentication (as an unknown user)
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: No authentication configured for request
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v3.0.0-next.8

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.
◒  Publishing packages▲  Failed to publish pkg-a: {"file":"index.js"}
{"file":"package.json"}
? One-time password: › ERROR: Yarn is terminating due to an unexpected empty event loop.
Please report this issue at https://github.com/yarnpkg/berry/issues.
🦋 Exited with code 1

"
`;
